--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> -->
-    <script src="phaser/phaser.min.js"></script>
-    <script src="state1.js"></script>
+    -->
+    <title>Document</title> 
+
+    <script type="text/javascript" src="phaser.min.js"></script>
+    <script type="text/javascript" src="Scene1.js"></script>
+    <script type="text/javascript" src="Scene2.js"></script>
+    <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
-
-    <script src="main.js"></script>
+    
 </body>
 </html>
